--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <h2 class="text-4xl font-bold text-white">Hablemos de su Proyecto</h2>
                     <p class="mt-4 text-lg text-gray-400">¿Tiene una idea? Contáctenos para una consulta gratuita.</p>
                 </div>
-                <form action="#" method="POST" class="space-y-6">
+                <form action="https://formspree.io/f/fundacionecopiensaevolution@gmail.com" method="POST" class="space-y-6">
                     <div>
                         <label for="name" class="sr-only">Nombre</label>
                         <input type="text" name="name" id="name" required class="block w-full bg-slate-800 border-slate-700 text-white rounded-md p-3 focus:ring-cyan-500 focus:border-cyan-500" placeholder="Su Nombre">
@@ -288,4 +288,5 @@
     </script>
 </body>
 </html>
+
 
