--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
         <!-- VISTA PRINCIPAL (CONTENEDOR) -->
         <div id="view-main">
             <!-- ===== Sección Héroe (Inicio) ===== -->
-            <section id="inicio" class="relative min-h-screen flex items-center justify-center text-center overflow-hidden">
+            <!-- Se agregó pt-20 para bajar el contenido de la barra de navegación fija (h-20) -->
+            <section id="inicio" class="relative min-h-screen flex items-center justify-center text-center overflow-hidden pt-20">
                  <video autoplay muted loop playsinline class="hero-video">
                     <!-- Video actualizado con el recurso de GitHub -->
                     <source src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/Animaci%C3%B3n_de_Realidad_Aumentada_Futurista.mp4" type="video/mp4">
@@ -198,8 +199,22 @@
                 <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
                     <div class="text-center mb-16">
                         <h1 class="text-4xl sm:text-5xl font-bold text-white">AR para Educación</h1>
-                        <p class="mt-4 text-lg text-gray-400 max-w-3xl mx-auto">Convierta los materiales de estudio en experiencias vivas, interactivas e inolvidables.</p>
+                        <!-- Texto actualizado para incluir colegios y universidades -->
+                        <p class="mt-4 text-lg text-gray-400 max-w-3xl mx-auto">Creamos soluciones para <span class="text-cyan-400 font-semibold">colegios y universidades</span>, convirtiendo materiales de estudio en experiencias vivas, interactivas e inolvidables.</p>
                         <button data-view="view-main" data-scroll="#servicios" class="mt-8 text-cyan-400 hover:text-cyan-300">&larr; Volver a Servicios</button>
+                    </div>
+
+                    <!-- NUEVA SECCIÓN: Compromiso Social -->
+                    <div class="mb-16">
+                        <div class="glass-card rounded-xl p-8 border-l-4 border-cyan-400">
+                            <h2 class="text-3xl font-bold text-white mb-4">Nuestro Compromiso Social</h2>
+                            <p class="text-lg text-gray-300 mb-4">
+                                Creemos en el poder de la educación. Por eso, con la <span class="font-semibold text-white">Fundación Ecopiensa Evolution</span>, nos comprometemos a que por cada 5 colegios que adquieran un modelo de Realidad Aumentada, donaremos un modelo educativo completo a un colegio de escasos recursos.
+                            </p>
+                            <p class="text-lg text-cyan-400 font-semibold">
+                                ¡Para lograr esta meta, requerimos el apoyo de todos con sus compras y pedidos!
+                            </p>
+                        </div>
                     </div>
                     
                     <!-- Video Destacado Educación -->
@@ -285,7 +300,7 @@
     <footer class="bg-slate-900 border-t border-slate-800">
         <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8 text-gray-500">
             <div class="flex flex-col sm:flex-row justify-between items-center">
-                <p class="mb-4 sm:mb-0">&copy; 2024 Propuesta AR. Todos los derechos reservados. <span class="ml-4 text-xs opacity-75">v1.02</span></p>
+                <p class="mb-4 sm:mb-0">&copy; 2024 Propuesta AR. Todos los derechos reservados. <span class="ml-4 text-xs opacity-75">v1.04</span></p>
                 <div class="flex items-center space-x-4">
                     <a href="#" class="hover:text-cyan-400 transition-colors">
                         <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/insragram.png" alt="Instagram" class="h-6 w-6 opacity-75 hover:opacity-100">
@@ -425,10 +440,15 @@
                     const imgContainer = document.createElement('div');
                     imgContainer.className = 'aspect-square bg-slate-800 rounded-lg overflow-hidden shadow-lg transform hover:scale-105 transition-transform duration-300 cursor-pointer';
                     const img = document.createElement('img');
-                    img.src = url;
+img.src = url;
                     img.alt = `Imagen de galería ${index + 1}`;
                     img.className = 'w-full h-full object-cover';
                     img.dataset.index = index;
+                    // Manejo de error para imágenes que no cargan
+                    img.onerror = () => {
+                        img.src = 'https://placehold.co/400x400/334155/94a3b8?text=Error';
+                        console.warn(`Error al cargar imagen: ${url}`);
+                    };
                     imgContainer.appendChild(img);
                     gallery.appendChild(imgContainer);
                 });
@@ -492,5 +512,7 @@
     </script>
 </body>
 </html>
+
+
 
 
