--- a/index.html
+++ b/index.html
@@ -47,12 +47,11 @@
         }
         .hero-video {
             position: absolute;
-            top: 50%;
-            left: 50%;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
             object-fit: cover;
-            transform: translate(-50%, -50%);
             z-index: -1;
             filter: brightness(0.3);
         }
@@ -122,26 +121,29 @@
         <!-- VISTA PRINCIPAL (CONTENEDOR) -->
         <div id="view-main">
             <!-- ===== Sección Héroe (Inicio) ===== -->
-            <!-- Se agregó pt-20 para bajar el contenido de la barra de navegación fija (h-20) -->
-            <section id="inicio" class="relative min-h-screen flex items-center justify-center text-center overflow-hidden pt-20">
+            <!-- Modificado: el video ahora comienza debajo de la barra de navegación -->
+            <section id="inicio" class="relative min-h-screen text-center overflow-hidden pt-20">
                  <video autoplay muted loop playsinline class="hero-video">
                     <!-- Video actualizado con el recurso de GitHub -->
                     <source src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/Animaci%C3%B3n_de_Realidad_Aumentada_Futurista.mp4" type="video/mp4">
                 </video>
-                <div class="z-10 px-4">
-                    <h1 class="text-4xl md:text-6xl lg:text-7xl font-extrabold text-white leading-tight mb-4">
-                        Transformando la Realidad <br/> con <span class="text-cyan-400">Tecnología Inmersiva</span>
-                    </h1>
-                    <p class="max-w-3xl mx-auto text-lg md:text-xl text-gray-300 mb-8">
-                        Diseñamos experiencias de Realidad Aumentada a medida que revolucionan la educación, la publicidad y la industria.
-                    </p>
-                    <div class="space-x-4">
-                        <a data-scroll="#servicios" href="#" class="inline-block bg-cyan-500 hover:bg-cyan-600 text-gray-900 font-bold py-3 px-8 rounded-lg text-lg transition-transform duration-300 transform hover:scale-105 shadow-lg">
-                            Nuestros Servicios
-                        </a>
-                        <a data-view="view-demo" href="#" class="inline-block bg-gray-700 hover:bg-gray-600 text-white font-bold py-3 px-8 rounded-lg text-lg transition-transform duration-300 transform hover:scale-105 shadow-lg">
-                            Probar Demo
-                        </a>
+                <!-- Este div interno ahora centra el contenido -->
+                <div class="z-10 px-4 min-h-screen flex flex-col items-center justify-center text-center">
+                    <div> <!-- Contenedor extra para el contenido -->
+                        <h1 class="text-4xl md:text-6xl lg:text-7xl font-extrabold text-white leading-tight mb-4">
+                            Transformando la Realidad <br/> con <span class="text-cyan-400">Tecnología Inmersiva</span>
+                        </h1>
+                        <p class="max-w-3xl mx-auto text-lg md:text-xl text-gray-300 mb-8">
+                            Diseñamos experiencias de Realidad Aumentada a medida que revolucionan la educación, la publicidad y la industria.
+                        </p>
+                        <div class="space-x-4">
+                            <a data-scroll="#servicios" href="#" class="inline-block bg-cyan-500 hover:bg-cyan-600 text-gray-900 font-bold py-3 px-8 rounded-lg text-lg transition-transform duration-300 transform hover:scale-105 shadow-lg">
+                                Nuestros Servicios
+                            </a>
+                            <a data-view="view-demo" href="#" class="inline-block bg-gray-700 hover:bg-gray-600 text-white font-bold py-3 px-8 rounded-lg text-lg transition-transform duration-300 transform hover:scale-105 shadow-lg">
+                                Probar Demo
+                            </a>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -300,7 +302,7 @@
     <footer class="bg-slate-900 border-t border-slate-800">
         <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8 text-gray-500">
             <div class="flex flex-col sm:flex-row justify-between items-center">
-                <p class="mb-4 sm:mb-0">&copy; 2024 Propuesta AR. Todos los derechos reservados. <span class="ml-4 text-xs opacity-75">v1.04</span></p>
+                <p class="mb-4 sm:mb-0">&copy; 2024 Propuesta AR. Todos los derechos reservados. <span class="ml-4 text-xs opacity-75">v1.05</span></p>
                 <div class="flex items-center space-x-4">
                     <a href="#" class="hover:text-cyan-400 transition-colors">
                         <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/insragram.png" alt="Instagram" class="h-6 w-6 opacity-75 hover:opacity-100">
@@ -512,9 +514,6 @@ img.src = url;
     </script>
 </body>
 </html>
-
-
-
 
 
 
