--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
             <!-- ===== Sección Héroe (Inicio) ===== -->
             <section id="inicio" class="relative min-h-screen text-center overflow-hidden">
                  <video autoplay muted loop playsinline class="hero-video">
-                    <!-- Video actualizado con el recurso de GitHub -->
-                    <source src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/Animaci%C3%B3n_de_Realidad_Aumentada_Futurista.mp4" type="video/mp4">
+                    <!-- ===== URL DEL VIDEO CORREGIDA CON CDN ===== -->
+                    <source src="https://cdn.jsdelivr.net/gh/instructorandradedcc/propuesta-AR@main/asetss/imagenes/pagina-propuestas-ar/Animaci%C3%B3n_de_Realidad_Aumentada_Futurista.mp4" type="video/mp4">
                 </video>
                 <!-- Este div interno ahora centra el contenido y aplica el padding-top -->
                 <div class="z-10 px-4 min-h-screen flex flex-col items-center justify-center pt-20 text-center">
