--- a/index.html
+++ b/index.html
@@ -211,6 +211,49 @@
                     </form>
                 </div>
             </section>
+
+            <!-- ===== NUEVA SECCIÓN: INFORMACIÓN ADICIONAL ===== -->
+            <section id="info-fundacion" class="py-24 bg-slate-800">
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                    <div class="text-center mb-16">
+                        <h2 class="text-4xl font-bold text-white">Conéctate con la Fundación</h2>
+                        <p class="mt-4 text-lg text-gray-400">Encuentra más formas de colaborar y seguir nuestra misión social.</p>
+                    </div>
+                    <div class="grid md:grid-cols-3 gap-8 items-center text-center">
+                        <!-- Columna 1: Contacto Directo -->
+                        <div class="glass-card rounded-xl p-8 flex flex-col items-center justify-center h-full">
+                            <h3 class="text-2xl font-bold text-white mb-6">Contacto Directo</h3>
+                            <div class="space-y-4 w-full">
+                                <!-- Email -->
+                                <a href="mailto:fundacionecopiensaevolution@gmail.com" class="flex items-center justify-center text-gray-300 hover:text-cyan-400 transition-colors p-2 rounded-lg hover:bg-slate-700/50">
+                                    <svg class="w-6 h-6 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+                                    <span class="text-sm">fundacionecopiensa@gmail.com</span>
+                                </a>
+                                <!-- WhatsApp -->
+                                <a href="https://wa.me/573222070501" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center text-gray-300 hover:text-cyan-400 transition-colors p-2 rounded-lg hover:bg-slate-700/50">
+                                    <svg class="w-6 h-6 mr-3" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.149-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 2.475 3.902c.348.228.622.458.835.627.543.424 1.064.646 1.571.758.664.145 1.27.125 1.748.076.533-.054 1.639-.669 1.868-1.316.23-.647.23-1.203.162-1.317-.069-.115-.267-.173-.548-.322m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/></svg>
+                                    <span class="text-sm">+57 322 207 0501</span>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- Columna 2: QR Code -->
+                        <div class="glass-card rounded-xl p-8 flex flex-col items-center justify-center h-full">
+                            <h3 class="text-2xl font-bold text-white mb-6">Escanea el QR</h3>
+                            <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/f.ecopiensa_evolution_qr.png" alt="QR Código de la Fundación Ecopiensa Evolution" class="w-48 h-48 rounded-lg shadow-lg object-cover">
+                            <p class="mt-4 text-sm text-gray-400">Conoce más sobre la fundación</p>
+                        </div>
+                        <!-- Columna 3: Instagram -->
+                        <div class="glass-card rounded-xl p-8 flex flex-col items-center justify-center h-full">
+                            <h3 class="text-2xl font-bold text-white mb-6">Síguenos en Instagram</h3>
+                            <a href="https://www.instagram.com/f.ecopiensa_evolution/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-cyan-400 hover:text-cyan-300 transition-colors text-lg font-medium">
+                                <svg class="w-8 h-8 mr-3" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zM5.838 12a6.162 6.162 0 1112.324 0 6.162 6.162 0 01-12.324 0zM12 16a4 4 0 110-8 4 4 0 010 8zm4.965-10.405a1.44 1.44 0 112.881.001 1.44 1.44 0 01-2.881-.001z"/></svg>
+                                <span>@f.ecopiensa_evolution</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         </div>
 
         <!-- VISTA EDUCACIÓN -->
@@ -322,7 +365,7 @@
             <div class="flex flex-col sm:flex-row justify-between items-center">
                 <p class="mb-4 sm:mb-0">&copy; 2024 Propuesta AR. Todos los derechos reservados. <span class="ml-4 text-xs opacity-75">v1.05</span></p>
                 <div class="flex items-center space-x-4">
-                    <a href="#" class="hover:text-cyan-400 transition-colors">
+                    <a href="https://www.instagram.com/f.ecopiensa_evolution/" target="_blank" rel="noopener noreferrer" class="hover:text-cyan-400 transition-colors">
                         <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/insragram.png" alt="Instagram" class="h-6 w-6 opacity-75 hover:opacity-100">
                     </a>
                 </div>
@@ -530,4 +573,3 @@
     </script>
 </body>
 </html>
-
