--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
+    <!-- Model Viewer para 3D -->
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
+
     <!-- Estilos personalizados -->
     <style>
         body {
@@ -99,6 +102,7 @@
                     <a data-view="view-main" data-scroll="#servicios" class="nav-link text-sm font-medium">Servicios</a>
                     <a data-view="view-demo" class="nav-link text-sm font-medium">Demo</a>
                     <a data-view="view-main" data-scroll="#arquitectura" class="nav-link text-sm font-medium">Arquitectura</a>
+                    <a data-view="view-main" data-scroll="#ingenieria" class="nav-link text-sm font-medium">Ingeniería</a>
                     <a data-view="view-main" data-scroll="#contacto" class="nav-link text-sm font-medium">Contacto</a>
                 </nav>
                 <div class="flex md:hidden">
@@ -116,6 +120,7 @@
                 <a data-view="view-main" data-scroll="#servicios" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Servicios</a>
                 <a data-view="view-demo" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Demo</a>
                 <a data-view="view-main" data-scroll="#arquitectura" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Arquitectura</a>
+                <a data-view="view-main" data-scroll="#ingenieria" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Ingeniería</a>
                 <a data-view="view-main" data-scroll="#contacto" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Contacto</a>
             </div>
         </div>
@@ -159,7 +164,7 @@
                         <h2 class="text-4xl font-bold text-white">Soluciones de Realidad Aumentada a Medida</h2>
                         <p class="mt-4 text-lg text-gray-400">Creamos el futuro interactivo para su sector.</p>
                     </div>
-                    <div class="grid md:grid-cols-2 gap-10">
+                    <div class="grid md:grid-cols-3 gap-10">
                         <a data-view="view-educacion" href="#" class="block glass-card rounded-xl p-8 transform hover:-translate-y-2 transition-transform duration-300">
                             <h3 class="text-2xl font-bold text-white mb-4">AR para Educación</h3>
                             <p class="text-gray-300">Transformamos libros y materiales de estudio en experiencias 3D interactivas. Fomentamos un aprendizaje inmersivo y memorable. Haga clic para ver ejemplos.</p>
@@ -168,17 +173,33 @@
                             <h3 class="text-2xl font-bold text-white mb-4">AR para Empresas</h3>
                             <p class="text-gray-300">Revolucione su marketing con tarjetas, folletos y pancartas interactivas. Capture la atención de sus clientes. Haga clic para ver ejemplos.</p>
                         </a>
+                        <a data-view="view-ingenieria" href="#" class="block glass-card rounded-xl p-8 transform hover:-translate-y-2 transition-transform duration-300">
+                            <h3 class="text-2xl font-bold text-white mb-4">AR para Ingeniería</h3>
+                            <p class="text-gray-300">Visualice y analice modelos 3D complejos en tu entorno. Optimiza el diseño y el prototipado de tus proyectos. Haga clic para ver ejemplos.</p>
+                        </a>
                     </div>
                 </div>
             </section>
 
-            <!-- ===== NUEVA SECCIÓN: BANNERS DE INSTAGRAM ===== -->
+            <!-- ===== ARQUITECTURA ===== -->
+            <section id="arquitectura" class="py-24">
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+                    <h2 class="text-4xl font-bold text-white">AR e IA para Arquitectura</h2>
+                    <p class="mt-4 text-lg text-gray-400 max-w-3xl mx-auto">Próximamente: una plataforma revolucionaria para visualizar proyectos sobre el terreno y realizar seguimiento de obras en tiempo real.</p>
+                </div>
+            </section>
+
+            <!-- ===== INGENIERÍA ===== -->
+            <section id="ingenieria" class="py-24">
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+                    <h2 class="text-4xl font-bold text-white">AR para Ingeniería</h2>
+                    <p class="mt-4 text-lg text-gray-400 max-w-3xl mx-auto">Potencia tus proyectos con visualización 3D inmersiva. Desde componentes mecánicos hasta ensamblajes complejos, lleva tus diseños al mundo real.</p>
+                </div>
+            </section>
+
+            <!-- ===== SECCIÓN BANNERS DE INSTAGRAM (MOVIDA AQUÍ) ===== -->
             <section id="instagram-banners" class="py-16 bg-slate-800/50">
                 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                    <div class="text-center mb-12">
-                        <h2 class="text-3xl font-bold text-white">Explora Nuestros Proyectos en Instagram</h2>
-                        <p class="mt-2 text-lg text-gray-400">Descubre cómo estamos transformando la educación y las empresas.</p>
-                    </div>
                     <div class="grid md:grid-cols-2 gap-8 items-center">
                         <!-- Banner 1: Educación -->
                         <a href="#" data-view="view-educacion" class="block group relative overflow-hidden rounded-lg shadow-xl transform hover:scale-105 transition-all duration-300">
@@ -196,14 +217,6 @@
                             </div>
                         </a>
                     </div>
-                </div>
-            </section>
-
-            <!-- ===== ARQUITECTURA ===== -->
-            <section id="arquitectura" class="py-24">
-                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-                    <h2 class="text-4xl font-bold text-white">AR e IA para Arquitectura</h2>
-                    <p class="mt-4 text-lg text-gray-400 max-w-3xl mx-auto">Próximamente: una plataforma revolucionaria para visualizar proyectos sobre el terreno y realizar seguimiento de obras en tiempo real.</p>
                 </div>
             </section>
 
@@ -376,6 +389,97 @@
             </section>
         </div>
 
+        <!-- VISTA INGENIERÍA (NUEVA) -->
+        <div id="view-ingenieria" class="hidden pt-20">
+            <section class="py-16 sm:py-24">
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                    <div class="text-center mb-16">
+                        <h1 class="text-4xl sm:text-5xl font-bold text-white">AR para Ingeniería</h1>
+                        <p class="mt-4 text-lg text-gray-400 max-w-3xl mx-auto">Generamos tu modelo 3D profesional de ingeniería para desarrollar tus grandes proyectos y proyectos personales.</p>
+                        <button data-view="view-main" data-scroll="#servicios" class="mt-8 text-cyan-400 hover:text-cyan-300">&larr; Volver a Servicios</button>
+                    </div>
+
+                    <!-- Galería de Modelos 3D -->
+                    <div class="space-y-12">
+                        <h2 class="text-3xl font-bold text-cyan-400 mb-4 text-center">Nuestros Modelos 3D de Ingeniería</h2>
+                        <p class="text-lg text-gray-300 mb-6 text-center">Interactúa con nuestros modelos 3D. Usa el ratón para rotar, acercar y explorar cada detalle.</p>
+                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                            <!-- Modelo 1 -->
+                            <div class="glass-card rounded-xl p-6">
+                                <model-viewer 
+                                    src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/modelss/bomba-atomica.glb" 
+                                    alt="Bomba Atómica 3D"
+                                    camera-controls 
+                                    auto-rotate 
+                                    ar 
+                                    ar-modes="webxr scene-viewer quick-look" 
+                                    shadow-intensity="1" 
+                                    style="width: 100%; height: 400px; border-radius: 8px;">
+                                </model-viewer>
+                                <h3 class="text-xl font-semibold text-white mt-4 text-center">Bomba Atómica</h3>
+                            </div>
+                            <!-- Modelo 2 -->
+                            <div class="glass-card rounded-xl p-6">
+                                <model-viewer 
+                                    src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/modelss/motor-automovil.glb" 
+                                    alt="Motor de Automóvil 3D"
+                                    camera-controls 
+                                    auto-rotate 
+                                    ar 
+                                    ar-modes="webxr scene-viewer quick-look" 
+                                    shadow-intensity="1" 
+                                    style="width: 100%; height: 400px; border-radius: 8px;">
+                                </model-viewer>
+                                <h3 class="text-xl font-semibold text-white mt-4 text-center">Motor de Automóvil</h3>
+                            </div>
+                            <!-- Modelo 3 -->
+                            <div class="glass-card rounded-xl p-6">
+                                <model-viewer 
+                                    src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/modelss/motor-avion.glb" 
+                                    alt="Motor de Avión 3D"
+                                    camera-controls 
+                                    auto-rotate 
+                                    ar 
+                                    ar-modes="webxr scene-viewer quick-look" 
+                                    shadow-intensity="1" 
+                                    style="width: 100%; height: 400px; border-radius: 8px;">
+                                </model-viewer>
+                                <h3 class="text-xl font-semibold text-white mt-4 text-center">Motor de Avión</h3>
+                            </div>
+                            <!-- Modelo 4 -->
+                            <div class="glass-card rounded-xl p-6">
+                                <model-viewer 
+                                    src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/modelss/turbina-avion.glb" 
+                                    alt="Turbina de Avión 3D"
+                                    camera-controls 
+                                    auto-rotate 
+                                    ar 
+                                    ar-modes="webxr scene-viewer quick-look" 
+                                    shadow-intensity="1" 
+                                    style="width: 100%; height: 400px; border-radius: 8px;">
+                                </model-viewer>
+                                <h3 class="text-xl font-semibold text-white mt-4 text-center">Turbina de Avión</h3>
+                            </div>
+                            <!-- Modelo 5 -->
+                            <div class="glass-card rounded-xl p-6">
+                                <model-viewer 
+                                    src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/modelss/valvula-esfera.glb" 
+                                    alt="Válvula de Esfera 3D"
+                                    camera-controls 
+                                    auto-rotate 
+                                    ar 
+                                    ar-modes="webxr scene-viewer quick-look" 
+                                    shadow-intensity="1" 
+                                    style="width: 100%; height: 400px; border-radius: 8px;">
+                                </model-viewer>
+                                <h3 class="text-xl font-semibold text-white mt-4 text-center">Válvula de Esfera</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+
         <!-- VISTA DEMO -->
         <div id="view-demo" class="hidden pt-20">
             <section class="py-16 sm:py-24">
@@ -433,6 +537,7 @@
             'view-main': document.getElementById('view-main'),
             'view-educacion': document.getElementById('view-educacion'),
             'view-empresas': document.getElementById('view-empresas'),
+            'view-ingenieria': document.getElementById('view-ingenieria'),
             'view-demo': document.getElementById('view-demo')
         };
         const allNavLinks = document.querySelectorAll('a[data-view], button[data-view], a[data-scroll]');
