--- a/index.html
+++ b/index.html
@@ -167,37 +167,55 @@
                     </div>
                 </div>
             </section>
-
-            <!-- ===== SECCIÓN DE BANNERS DE INSTAGRAM REINTEGRADA ===== -->
+            
+            <!-- ===== SECCIÓN DE BANNERS ACTUALIZADA CON TEXTO ===== -->
             <section id="instagram-banners" class="py-16 bg-slate-800/50">
                 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                     <div class="text-center mb-12">
                         <h2 class="text-3xl font-bold text-white">Explora Nuestras Soluciones</h2>
                         <p class="mt-2 text-lg text-gray-400">Descubre cómo estamos transformando cada sector.</p>
                     </div>
-                    <!-- ACTUALIZADO A 3 COLUMNAS -->
-                    <div class="grid md:grid-cols-3 gap-8 items-center">
+                    <!-- ACTUALIZADO A 3 COLUMNAS CON TARJETAS COMPLETAS -->
+                    <div class="grid md:grid-cols-3 gap-8 items-start">
                         <!-- Banner 1: Educación -->
-                        <a href="#" data-view="view-educacion" class="block group relative overflow-hidden rounded-lg shadow-xl transform hover:scale-105 transition-all duration-300">
-                            <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/ar-para-educacion.png" alt="AR para Educación" class="w-full h-auto object-cover">
-                            <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                                <span class="text-white text-2xl font-bold">Ver Soluciones de Educación</span>
+                        <a href="#" data-view="view-educacion" class="block group rounded-lg shadow-xl transform hover:scale-105 transition-all duration-300 overflow-hidden glass-card">
+                            <div class="relative overflow-hidden">
+                                <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/ar-para-educacion.png" alt="AR para Educación" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-110">
+                                <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                                    <span class="text-white text-xl font-bold text-center p-4">Ver Soluciones de Educación</span>
+                                </div>
+                            </div>
+                            <div class="p-6">
+                                <h3 class="text-2xl font-bold text-white mb-4">AR para Educación</h3>
+                                <p class="text-gray-300 text-sm">Transformamos libros y materiales de estudio en experiencias 3D interactivas. Fomentamos un aprendizaje inmersivo y memorable. Haga clic para ver ejemplos.</p>
                             </div>
                         </a>
 
                         <!-- Banner 2: Empresas -->
-                        <a href="#" data-view="view-empresas" class="block group relative overflow-hidden rounded-lg shadow-xl transform hover:scale-105 transition-all duration-300">
-                            <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/ar-para-empresas.png" alt="AR para Empresas" class="w-full h-auto object-cover">
-                            <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                                <span class="text-white text-2xl font-bold">Ver Soluciones de Empresas</span>
+                        <a href="#" data-view="view-empresas" class="block group rounded-lg shadow-xl transform hover:scale-105 transition-all duration-300 overflow-hidden glass-card">
+                            <div class="relative overflow-hidden">
+                                <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/ar-para%20empresas.png" alt="AR para Empresas" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-110">
+                                <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                                    <span class="text-white text-xl font-bold text-center p-4">Ver Soluciones de Empresas</span>
+                                </div>
+                            </div>
+                            <div class="p-6">
+                                <h3 class="text-2xl font-bold text-white mb-4">AR para Empresas</h3>
+                                <p class="text-gray-300 text-sm">Revolucione su marketing con tarjetas, folletos y pancartas interactivas. Capture la atención de sus clientes. Haga clic para ver ejemplos.</p>
                             </div>
                         </a>
                         
                         <!-- NUEVO BANNER 3: Ingeniería -->
-                        <a href="#" data-view="view-ingenieria" class="block group relative overflow-hidden rounded-lg shadow-xl transform hover:scale-105 transition-all duration-300">
-                            <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/ar-para-inegnieria.png" alt="AR para Ingeniería" class="w-full h-auto object-cover"> <!-- Corregido a 'inegnieria' como en el repo -->
-                            <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                                <span class="text-white text-2xl font-bold">Ver Soluciones de Ingeniería</span>
+                        <a href="#" data-view="view-ingenieria" class="block group rounded-lg shadow-xl transform hover:scale-105 transition-all duration-300 overflow-hidden glass-card">
+                            <div class="relative overflow-hidden">
+                                <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/ar-para-inegnieria.png" alt="AR para Ingeniería" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-110">
+                                <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                                    <span class="text-white text-xl font-bold text-center p-4">Ver Soluciones de Ingeniería</span>
+                                </div>
+                            </div>
+                            <div class="p-6">
+                                <h3 class="text-2xl font-bold text-white mb-4">AR para Ingeniería</h3>
+                                <p class="text-gray-300 text-sm">Visualice y analice modelos 3D complejos en tu entorno. Optimiza el diseño y el prototipado de tus proyectos. Haga clic para ver ejemplos.</p>
                             </div>
                         </a>
                     </div>
@@ -803,6 +821,8 @@
     </script>
 </body>
 </html>
+
+
 
 
 
