--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
                         <h2 class="text-3xl font-bold text-white">Explora Nuestras Soluciones</h2>
                         <p class="mt-2 text-lg text-gray-400">Descubre cómo estamos transformando cada sector.</p>
                     </div>
-                    <!-- ACTUALIZADO A 3 COLUMNAS CON TARJETAS COMPLETAS -->
-                    <div class="grid md:grid-cols-3 gap-8 items-start">
+                    <!-- ACTUALIZADO A 3 COLUMNAS CON TARJETAS COMPLETAS Y ALINEADAS -->
+                    <div class="grid md:grid-cols-3 gap-8 items-stretch"> <!-- CAMBIO: items-start a items-stretch -->
                         <!-- Banner 1: Educación -->
-                        <a href="#" data-view="view-educacion" class="block group rounded-lg shadow-xl transform hover:scale-105 transition-all duration-300 overflow-hidden glass-card">
-                            <div class="relative overflow-hidden">
-                                <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/ar-para-educacion.png" alt="AR para Educación" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-110">
+                        <a href="#" data-view="view-educacion" class="block group rounded-lg shadow-xl transform hover:scale-105 transition-all duration-300 overflow-hidden glass-card flex flex-col"> <!-- CAMBIO: añadido flex flex-col -->
+                            <div class="relative overflow-hidden aspect-[4/5]"> <!-- CAMBIO: añadido aspect-[4/5] -->
+                                <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/ar-para-educacion.png" alt="AR para Educación" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110"> <!-- CAMBIO: h-auto a h-full -->
                                 <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                                     <span class="text-white text-xl font-bold text-center p-4">Ver Soluciones de Educación</span>
                                 </div>
@@ -192,9 +192,9 @@
                         </a>
 
                         <!-- Banner 2: Empresas -->
-                        <a href="#" data-view="view-empresas" class="block group rounded-lg shadow-xl transform hover:scale-105 transition-all duration-300 overflow-hidden glass-card">
-                            <div class="relative overflow-hidden">
-                                <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/ar-para%20empresas.png" alt="AR para Empresas" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-110">
+                        <a href="#" data-view="view-empresas" class="block group rounded-lg shadow-xl transform hover:scale-105 transition-all duration-300 overflow-hidden glass-card flex flex-col"> <!-- CAMBIO: añadido flex flex-col -->
+                            <div class="relative overflow-hidden aspect-[4/5]"> <!-- CAMBIO: añadido aspect-[4/5] -->
+                                <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/ar-para%20empresas.png" alt="AR para Empresas" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110"> <!-- CAMBIO: h-auto a h-full -->
                                 <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                                     <span class="text-white text-xl font-bold text-center p-4">Ver Soluciones de Empresas</span>
                                 </div>
@@ -206,9 +206,9 @@
                         </a>
                         
                         <!-- NUEVO BANNER 3: Ingeniería -->
-                        <a href="#" data-view="view-ingenieria" class="block group rounded-lg shadow-xl transform hover:scale-105 transition-all duration-300 overflow-hidden glass-card">
-                            <div class="relative overflow-hidden">
-                                <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/ar-para-inegnieria.png" alt="AR para Ingeniería" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-110">
+                        <a href="#" data-view="view-ingenieria" class="block group rounded-lg shadow-xl transform hover:scale-105 transition-all duration-300 overflow-hidden glass-card flex flex-col"> <!-- CAMBIO: añadido flex flex-col -->
+                            <div class="relative overflow-hidden aspect-[4/5]"> <!-- CAMBIO: añadido aspect-[4/5] -->
+                                <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/ar-para-inegnieria.png" alt="AR para Ingeniería" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110"> <!-- CAMBIO: h-auto a h-full -->
                                 <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                                     <span class="text-white text-xl font-bold text-center p-4">Ver Soluciones de Ingeniería</span>
                                 </div>
@@ -296,7 +296,7 @@
                         <div class="glass-card rounded-xl p-8 flex flex-col items-center justify-center h-full">
                             <h3 class="text-2xl font-bold text-white mb-6">Síguenos en Instagram</h3>
                             <a href="https://www.instagram.com/f.ecopiensa_evolution/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-cyan-400 hover:text-cyan-300 transition-colors text-lg font-medium">
-                                <svg class="w-8 h-8 mr-3" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zM5.838 12a6.162 6.162 0 1112.324 0 6.162 6.162 0 01-12.324 0zM12 16a4 4 0 110-8 4 4 0 010 8zm4.965-10.405a1.44 1.44 0 112.881.001 1.44 1.44 0 01-2.881-.001z"/></svg>
+                                <svg class="w-8 h-8 mr-3" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0 3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zM5.838 12a6.162 6.162 0 1112.324 0 6.162 6.162 0 01-12.324 0zM12 16a4 4 0 110-8 4 4 0 010 8zm4.965-10.405a1.44 1.44 0 112.881.001 1.44 1.44 0 01-2.881-.001z"/></svg>
                                 <span>@f.ecopiensa_evolution</span>
                             </a>
                         </div>
@@ -821,6 +821,7 @@
     </script>
 </body>
 </html>
+
 
 
 
