--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                 </div>
                 <nav class="hidden md:flex items-baseline space-x-8">
                     <a data-view="view-main" data-scroll="#inicio" class="nav-link text-sm font-medium">Inicio</a>
-                    <a data-view="view-main" data-scroll="#servicios" class="nav-link text-sm font-medium">Servicios</a>
+                    <!-- CAMBIO: data-scroll="#servicios" a data-scroll="#instagram-banners" -->
+                    <a data-view="view-main" data-scroll="#instagram-banners" class="nav-link text-sm font-medium">Servicios</a>
                     <a data-view="view-demo" class="nav-link text-sm font-medium">Demo</a>
                     <!-- NUEVO ENLACE DE NAVEGACIÓN -->
                     <a data-view="view-ingenieria" class="nav-link text-sm font-medium">Ingeniería</a>
@@ -127,7 +128,8 @@
         <div class="md:hidden hidden" id="mobile-menu">
             <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
                 <a data-view="view-main" data-scroll="#inicio" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Inicio</a>
-                <a data-view="view-main" data-scroll="#servicios" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Servicios</a>
+                <!-- CAMBIO: data-scroll="#servicios" a data-scroll="#instagram-banners" -->
+                <a data-view="view-main" data-scroll="#instagram-banners" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Servicios</a>
                 <a data-view="view-demo" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Demo</a>
                 <!-- NUEVO ENLACE DE NAVEGACIÓN MÓVIL -->
                 <a data-view="view-ingenieria" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Ingeniería</a>
@@ -157,10 +159,12 @@
                             Diseñamos experiencias de Realidad Aumentada a medida que revolucionan la educación, la ingeniería, la publicidad y la industria.
                         </p>
                         <div class="space-x-4">
-                            <a data-scroll="#servicios" href="#" class="inline-block bg-cyan-500 hover:bg-cyan-600 text-gray-900 font-bold py-3 px-8 rounded-lg text-lg transition-transform duration-300 transform hover:scale-105 shadow-lg">
+                            <!-- CAMBIO: data-scroll, clases y tamaño -->
+                            <a data-scroll="#instagram-banners" href="#" class="inline-block bg-transparent border-2 border-cyan-400 text-cyan-400 hover:bg-cyan-400 hover:text-gray-900 font-bold py-4 px-10 rounded-lg text-xl transition-all duration-300 transform hover:scale-105 shadow-lg">
                                 Nuestros Servicios
                             </a>
-                            <a data-view="view-demo" href="#" class="inline-block bg-gray-700 hover:bg-gray-600 text-white font-bold py-3 px-8 rounded-lg text-lg transition-transform duration-300 transform hover:scale-105 shadow-lg">
+                            <!-- CAMBIO: clases y tamaño -->
+                            <a data-view="view-demo" href="#" class="inline-block bg-cyan-500 hover:bg-cyan-600 text-gray-900 font-bold py-4 px-10 rounded-lg text-xl transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-cyan-500/50">
                                 Probar Demo
                             </a>
                         </div>
@@ -313,7 +317,8 @@
                     <div class="text-center mb-16">
                         <h1 class="text-4xl sm:text-5xl font-bold text-white">AR para Educación</h1>
                         <p class="mt-4 text-lg text-gray-400 max-w-3xl mx-auto">Creamos soluciones para <span class="text-cyan-400 font-semibold">colegios y universidades</span>, convirtiendo materiales de estudio en experiencias vivas, interactivas e inolvidables.</p>
-                        <button data-view="view-main" data-scroll="#servicios" class="mt-8 text-cyan-400 hover:text-cyan-300">&larr; Volver a Servicios</button>
+                        <!-- CAMBIO: data-scroll="#servicios" a data-scroll="#instagram-banners" -->
+                        <button data-view="view-main" data-scroll="#instagram-banners" class="mt-8 text-cyan-400 hover:text-cyan-300">&larr; Volver a Servicios</button>
                     </div>
 
                     <!-- Compromiso Social -->
@@ -366,7 +371,8 @@
                      <div class="text-center mb-16">
                         <h1 class="text-4xl sm:text-5xl font-bold text-white">AR para Empresas</h1>
                         <p class="mt-4 text-lg text-gray-400 max-w-3xl mx-auto">Cree campañas de marketing y materiales que sus clientes no solo verán, sino que experimentarán.</p>
-                        <button data-view="view-main" data-scroll="#servicios" class="mt-8 text-cyan-400 hover:text-cyan-300">&larr; Volver a Servicios</button>
+                        <!-- CAMBIO: data-scroll="#servicios" a data-scroll="#instagram-banners" -->
+                        <button data-view="view-main" data-scroll="#instagram-banners" class="mt-8 text-cyan-400 hover:text-cyan-300">&larr; Volver a Servicios</button>
                     </div>
 
                     <!-- Video Empresas -->
@@ -406,7 +412,8 @@
                     <div class="text-center mb-16">
                         <h1 class="text-4xl sm:text-5xl font-bold text-white">AR para Ingeniería</h1>
                         <p class="mt-4 text-lg text-gray-400 max-w-3xl mx-auto">Modelado 3D para <span class="text-cyan-400 font-semibold">ingeniería biomédica, mecánica y civil</span>. Visualice prototipos, modelos anatómicos y prótesis interactivas.</p>
-                        <button data-view="view-main" data-scroll="#servicios" class="mt-8 text-cyan-400 hover:text-cyan-300">&larr; Volver a Servicios</button>
+                        <!-- CAMBIO: data-scroll="#servicios" a data-scroll="#instagram-banners" -->
+                        <button data-view="view-main" data-scroll="#instagram-banners" class="mt-8 text-cyan-400 hover:text-cyan-300">&larr; Volver a Servicios</button>
                     </div>
 
                     <!-- Galería de Modelos 3D para Ingeniería -->
